--- a/css/unity.css
+++ b/css/unity.css
@@ -4,3 +4,31 @@
     grid-template-columns: repeat(2, minmax(30em, 1fr));
     grid-template-rows: repeat(auto-fit, auto);
 }
+
+.proj-vid {
+    grid-column: 1 / 1;
+    display: inline-block;
+    width: 30em;
+}
+
+.proj-vid-desc {
+    grid-column: 2 / -1;
+}
+
+@media screen and (max-width: 600px) {
+    .page-text-body {
+        transform: translateX(2%);
+        display: flex;
+        flex-direction: column;
+    }
+
+    .proj-vid {
+        display: block;
+        width: 20em;
+    }
+
+    .grid-vid-desc {
+        font-size: 10px;
+        display: block;
+    }
+}
