--- a/css/unity.css
+++ b/css/unity.css
@@ -15,20 +15,24 @@
     grid-column: 2 / -1;
 }
 
+.proj-vid-desc>a:hover {
+    animation: blast .75s infinite;
+}
+
 @media screen and (max-width: 600px) {
-    .page-text-body {
-        transform: translateX(2%);
-        display: flex;
-        flex-direction: column;
-    }
+  .page-text-body {
+    transform: translateX(2%);
+    display: flex;
+    flex-direction: column;
+  }
 
-    .proj-vid {
-        display: block;
-        width: 20em;
-    }
+  .proj-vid {
+    display: block;
+    width: 20em;
+  }
 
-    .grid-vid-desc {
-        font-size: 10px;
-        display: block;
-    }
+  .grid-vid-desc {
+    font-size: 10px;
+    display: block;
+  }
 }
