--- a/css/newlayout.css
+++ b/css/newlayout.css
@@ -50,7 +50,7 @@ header {
 
 footer {
     grid-area: footer;
-    grid-column: span 3;
+    grid-column: 1 / -1;
     display: flex;
     flex-direction: row;
     justify-content: space-around;
