--- a/css/home.css
+++ b/css/home.css
@@ -1,3 +1,9 @@
 body {
   grid-template-rows: 110px 40px 39em 75px;
 }
+
+@media screen and (max-width: 600px) {
+  body {
+    grid-template-rows: 115px 300px 2fr 100px;
+  }
+}
