Changed media query

--- a/css/newlayout.css
+++ b/css/newlayout.css
@@ -80,6 +80,7 @@ footer {
 
 @media screen and (max-width: 600px) {
     body {
+      font-size: 12px;
         grid-template-columns: 100%;
         grid-template-rows: 115px 300px 2fr 100px;
         grid-template-areas:
