--- a/css/unity.css
+++ b/css/unity.css
@@ -20,6 +20,10 @@
 }
 
 @media screen and (max-width: 600px) {
+  body {
+    grid-template-rows: 90px 350px 2fr 100px;
+  }
+
   .page-text-body {
     transform: translateX(2%);
     display: flex;
