--- a/css/illustrator.css
+++ b/css/illustrator.css
@@ -1,18 +1,27 @@
+/* autoprefixer grid: autoplace */
+
 body {
+  -ms-grid-rows: 110px 40px 100em 100px;
   grid-template-rows: 110px 40px 100em 100px;
 }
 
 .page-text-body {
+    display: -ms-grid;
     display: grid;
     grid-gap: 10px;
+    -ms-grid-columns: minmax(30em, 1fr) 10px minmax(30em, 1fr);
     grid-template-columns: repeat(2, minmax(30em, 1fr));
     grid-template-rows: repeat(auto-fit, auto);
 }
 
 .comic-pic-container {
+  display: -webkit-box;
   display: flex;
-  flex-direction: row;
-  justify-content: center;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+          flex-direction: row;
+  -webkit-box-pack: center;
+          justify-content: center;
 }
 
 .ill-pic {
@@ -26,7 +35,8 @@ body {
 }
 
 .comic-logos-pic {
-  justify-self: center;
+  -ms-grid-column-align: center;
+      justify-self: center;
 }
 
 .seeker-pic {
@@ -40,18 +50,24 @@ body {
 }
 
 .ill-pic-desc>a:hover {
-  animation: blast .75s infinite;
+  -webkit-animation: blast .75s infinite;
+          animation: blast .75s infinite;
 }
 
 @media screen and (max-width: 600px) {
   body {
+    -ms-grid-rows: 110px 350px 2fr 75px;
     grid-template-rows: 110px 350px 2fr 75px;
   }
 
   .page-text-body {
-    transform: translateX(2%);
+    -webkit-transform: translateX(2%);
+            transform: translateX(2%);
+    display: -webkit-box;
     display: flex;
-    flex-direction: column;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+            flex-direction: column;
   }
 
   .seeker-pic {
