--- a/css/newstandardstyle.css
+++ b/css/newstandardstyle.css
@@ -1,3 +1,5 @@
+/* autoprefixer grid: autoplace */
+
 @charset "UTF-8";
 @font-face {
     font-family: Jura-Regular;
@@ -8,14 +10,16 @@
 /** Body Section **/
 body {
   font-family: Jura-Regular, cursive, monospace;
-  font-kerning: normal;
+  -webkit-font-kerning: normal;
+          font-kerning: normal;
   background-color: rgb(53, 53, 53);
   color: rgb(0, 150, 200);
 }
 
 a {
   font-family: Jura-Regular, cursive, monospace;
-  font-kerning: normal;
+  -webkit-font-kerning: normal;
+          font-kerning: normal;
   color: rgba(0, 150, 200, .85);
   vertical-align: middle;
   text-align: center;
@@ -33,7 +37,8 @@ header, nav, .content {
 
 .header-img:hover {
   cursor: pointer;
-  animation: bounce 1.25s infinite;
+  -webkit-animation: bounce 1.25s infinite;
+          animation: bounce 1.25s infinite;
 }
 
 /** Navigation Section **/
@@ -82,7 +87,8 @@ footer {
 }
 
 .footer-contact-item:hover {
-  animation: blast .75s infinite;
+  -webkit-animation: blast .75s infinite;
+          animation: blast .75s infinite;
 }
 
 /* Animations */
@@ -99,21 +105,6 @@ footer {
     100% {
       box-shadow: rgba(0, 0, 0, 0);
     }
-}
-
-@-moz-keyframes bounce {
-  0% {
-    box-shadow: rgba(0, 0, 0, 0);
-  }
-
-  50% {
-    box-shadow: black 5px 5px 8px,
-                 black 0px 0px 10px;
-  }
-
-  100% {
-    box-shadow: rgba(0, 0, 0, 0);
-  }
 }
 
 @-webkit-keyframes bounce {
@@ -145,21 +136,6 @@ footer {
     100% {
       text-shadow: rgba(0, 0, 0, 0);
     }
-}
-
-@-moz-keyframes blast {
-  0% {
-    text-shadow: rgba(0, 0, 0, 0);
-  }
-
-  50% {
-    text-shadow: gold 5px 5px 8px,
-                 orange 0px 0px 10px;
-  }
-
-  100% {
-    text-shadow: rgba(0, 0, 0, 0);
-  }
 }
 
 @-webkit-keyframes blast {
