Added JS to detect Internet Explorer and popup a message stating it's not supported

--- a/css/newlayout.css
+++ b/css/newlayout.css
@@ -1,20 +1,15 @@
-/* autoprefixer grid: autoplace */
-
 html, body {
     margin: 0;
     padding: 0;
 }
 
 body {
-    display: -ms-grid;
     display: grid;
     grid-row-gap: 3%;
     grid-column-gap: 3%;
-    -ms-grid-columns: 1fr 3% 1fr 3% 4fr 3% 1fr;
     grid-template-columns: 1fr 1fr 4fr 1fr;
-    -ms-grid-rows: 110px 3% 40px 3% 60em 3% 75px;
     grid-template-rows: 110px 40px 60em 75px;
-        grid-template-areas:
+    grid-template-areas:
         "gutter-left   header    header      gutter-right"
         "gutter-left   .         page-title  gutter-right"
         "gutter-left   nav       content     gutter-right"
@@ -22,9 +17,6 @@ body {
 }
 
 header {
-    -ms-grid-row: 1;
-    -ms-grid-column: 3;
-    -ms-grid-column-span: 3;
     grid-area: header;
 }
 
@@ -40,10 +32,7 @@ header {
 }
 
 .headNav {
-    -ms-grid-row: 5;
-    -ms-grid-column: 3;
     grid-area: nav;
-    display: -ms-grid;
     display: grid;
     grid-column-gap: 10px;
     grid-template-rows: repeat(auto-fit, minmax(30px, 75px));
@@ -51,30 +40,24 @@ header {
 
 .navlink {
     text-align: center;
-    -ms-grid-row-align: center;
-        align-self: center;
-    -ms-grid-column-align: stretch;
-        justify-self: stretch;
+    align-self: center;
+    justify-self: stretch;
 }
 
 .content {
-    -ms-grid-row: 5;
-    -ms-grid-column: 5;
     grid-area: content;
     overflow-x: wrap;
     overflow-y: visible;
 }
 
 footer {
-    -ms-grid-row: 7;
-    -ms-grid-column: 5;
     grid-area: footer;
     grid-column: 1 / -1;
     display: -webkit-box;
     display: flex;
     -webkit-box-orient: horizontal;
     -webkit-box-direction: normal;
-            flex-direction: row;
+    flex-direction: row;
     justify-content: space-around;
 }
 
@@ -109,9 +92,7 @@ footer {
 
 @media screen and (max-width: 600px) {
     body {
-        -ms-grid-columns: 100%;
         grid-template-columns: 100%;
-        -ms-grid-rows: 115px 1% 300px 1% 2fr 1% 100px;
         grid-template-rows: 115px 300px 2fr 100px;
             grid-template-areas:
             "header"
@@ -130,10 +111,8 @@ footer {
     }
 
     .headNav {
-        -ms-grid-row: 5;
-        -ms-grid-column: 3;
         grid-area: nav;
-        display: -ms-grid;
+        display: -ms-grid
         display: grid;
         grid-row-gap: 10px;
         grid-template-rows: repeat(auto-fit, minmax(30px, 75px));
@@ -142,62 +121,30 @@ footer {
     .navlink {
         text-align: center;
         -webkit-box-pack: center;
-                justify-content: center;
-        -ms-grid-row-align: center;
-            align-self: center;
-        -ms-grid-column-align: stretch;
-            justify-self: stretch;
+        justify-content: center;
+        align-self: center;
+        justify-self: stretch;
     }
 
     footer {
-        -ms-grid-row: 7;
-        -ms-grid-column: 5;
         grid-area: footer;
         grid-column: 1 / -1;
         display: -webkit-box;
         display: flex;
         -webkit-box-orient: vertical;
         -webkit-box-direction: normal;
-                flex-direction: column;
+        flex-direction: column;
         justify-content: space-around;
-    }
-
-    @media screen and (max-width: 600px) {
-      .headNav {
-              -ms-grid-row: 3;
-              -ms-grid-column: 1;
-      }
-      footer {
-              -ms-grid-row: 7;
-              -ms-grid-column: 1;
-      }
     }
 
     .footer-text {
         -webkit-transform: translateX(30%);
-                transform: translateX(30%);
+        transform: translateX(30%);
     }
 
     .footer-contact {
         display: inline-block;
         -webkit-transform: translate(25%, -25%);
-                transform: translate(25%, -25%);
-    }
-    header {
-        -ms-grid-row: 1;
-        -ms-grid-column: 1;
-        -ms-grid-column-span: 1;
-    }
-    .headNav {
-        -ms-grid-row: 3;
-        -ms-grid-column: 1;
-    }
-    .content {
-        -ms-grid-row: 5;
-        -ms-grid-column: 1;
-    }
-    footer {
-        -ms-grid-row: 7;
-        -ms-grid-column: 1;
+        transform: translate(25%, -25%);
     }
 }
