--- a/css/newlayout.css
+++ b/css/newlayout.css
@@ -90,7 +90,14 @@ footer {
             transform: translateX(50%);
 }
 
-@media screen and (max-width: 600px) {
+@media
+  only screen and (max-width: 600px),
+  only screen and (-webkit-min-device-pixel-ratio: 3),
+  only screen and (   min--moz-device-pixel-ratio: 3),
+  only screen and (     -o-min-device-pixel-ratio: 3/1),
+  only screen and (        min-device-pixel-ratio: 3),
+  only screen and (                min-resolution: 458dpi),
+  only screen and (                min-resolution: 3dppx) {
     body {
         grid-template-columns: 100%;
         grid-template-rows: 115px 300px 2fr 100px;
