--- a/css/unreal.css
+++ b/css/unreal.css
@@ -14,9 +14,16 @@
     grid-column: 2 / -1;
 }
 
-@media screen and (max-width: 600px) {
+@media
+  only screen and (min-width: 360px) and  (max-width: 600px),
+  only screen and (-webkit-min-device-pixel-ratio: 3),
+  only screen and (   min--moz-device-pixel-ratio: 3),
+  only screen and (     -o-min-device-pixel-ratio: 3/1),
+  only screen and (        min-device-pixel-ratio: 3),
+  only screen and (                min-resolution: 458dpi),
+  only screen and (                min-resolution: 3dppx) {
   body {
-    grid-template-rows: 110px 350px 2fr 75px;
+    grid-template-rows: 140px 340px 2fr 75px;
   }
 
   .page-text-body {
