--- a/css/unreal.css
+++ b/css/unreal.css
@@ -22,21 +22,22 @@
   only screen and (        min-device-pixel-ratio: 3),
   only screen and (                min-resolution: 458dpi),
   only screen and (                min-resolution: 3dppx) {
+
   body {
-    grid-template-rows: 140px 340px 2fr 75px;
+    grid-row-gap: 3px;
   }
 
   .page-text-body {
-    -webkit-transform: translateX(2%);
-    transform: translateX(2%);
-    display: -webkit-box;
     display: flex;
-    -webkit-box-orient: vertical;
-    -webkit-box-direction: normal;
     flex-direction: column;
   }
 
   .unreal-imgs {
+    align-self: center;
     width: 20em;
+  }
+
+  .unreal-imgs-desc {
+    text-align: center;
   }
 }
