--- a/css/home.css
+++ b/css/home.css
@@ -1,3 +1,7 @@
+body {
+  grid-template-rows: auto 34em 75px;
+}
+
 @media
   only screen and (min-width: 360px) and (max-width: 600px),
   only screen and (-webkit-min-device-pixel-ratio: 3),
@@ -6,6 +10,7 @@
   only screen and (        min-device-pixel-ratio: 3),
   only screen and (                min-resolution: 458dpi),
   only screen and (                min-resolution: 3dppx) {
-  body {
-    grid-row-gap: 3px;
-  }
+    body {
+      grid-row-gap: 3px;
+    }
+}
