--- a/css/android.css
+++ b/css/android.css
@@ -5,6 +5,21 @@
     grid-template-rows: repeat(auto-fit, auto);
 }
 
+.proj-vid {
+    grid-column: 1 / 1;
+    display: inline-block;
+    width: 30em;
+}
+
+.proj-vid-desc {
+    grid-column: 2 / -1;
+}
+
+.proj-vid-desc>a:hover {
+    -webkit-animation: blast .75s infinite;
+            animation: blast .75s infinite;
+}
+
 @media
   only screen and (min-width: 360px) and (max-width: 600px),
   only screen and (-webkit-min-device-pixel-ratio: 3),
@@ -14,6 +29,21 @@
   only screen and (                min-resolution: 458dpi),
   only screen and (                min-resolution: 3dppx) {
   body {
-    grid-template-rows: 140px 340px 2fr 75px;
-  }
+      grid-row-gap: 3px;
+    }
+
+    .page-text-body {
+      display: flex;
+      flex-direction: column;
+    }
+    
+    .proj-vid {
+      align-self: center;
+      width: auto;
+      height: 40em;
+    }
+
+    .proj-vid-desc {
+      text-align: center;
+    }
 }
